# diplomski-rad

./: .gitmodules  ESP32 State & Data-Grafana dashboard.json  ESP32Lamda.py  ESP32ShadowLambda.py  README.md  korisni_linkovi.txt
examples/fleet_provisioning/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/fleet_provisioning/main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  app_main.c  demo_config.h  fleet_provisioning_with_csr.c  fleet_provisioning_with_csr_demo.c  idf_component.yml  lvgl_demo_ui.c  moisture.c  moisture.h  mqtt_operations.c  mqtt_operations.h  ota_demo_core_http.c  pkcs11_operations.c  pkcs11_operations.h
examples/fleet_provisioning/spiffs_image/certs/: claim_cert.crt  claim_private.key
examples/http/: CMakeLists.txt
examples/jobs/: CMakeLists.txt
examples/mqtt/: CMakeLists.txt  sdkconfig
examples/ota/ota_http/: CMakeLists.txt
examples/ota/ota_mqtt/: CMakeLists.txt
examples/thing_shadow/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/thing_shadow/main/: shadow_demo_main.c
latex/: .gitignore  AWS.tex  ESP32.tex  Opis_Sustava.tex  Povezivanje.tex  Uvod.tex  Web_Aplikacija.tex  Zakljucak.tex  diplomski.tex  literatura.bib
latex/imgs/: alerting_resolved.drawio  alerting_system.drawio  job_states.drawio  shema.drawio
main_app/: CMakeLists.txt  sdkconfig  sdkconfig.old
main_app/main/: idf_component.yml
wifi_prov_mgr/: sdkconfig
wifi_prov_mgr/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  lvgl_demo_ui.c
